--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -33,13 +33,13 @@
         <span class="menu-icon">
           <app-keenicon name="setting-3" class="fs-2"></app-keenicon>
         </span>
-        <span class="menu-title" data-link="/apps">Principal
+        <span class="menu-title" data-link="/configuraciones">Principal
         </span>
         <span class="menu-arrow"></span>
       </span>
       <div class="menu-sub menu-sub-accordion" routerLinkActive="menu-active-bg">
         <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/apps/users">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/configuraciones/sucursales/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
