--- a/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
@@ -6,8 +6,8 @@
          <!--begin::Search-->
          <div class="d-flex align-items-center position-relative my-1">
             <i class="ki-duotone ki-magnifier fs-3 position-absolute ms-5"><span class="path1"></span><span class="path2"></span></i>
-            <input type="text" [(ngModel)]="search" name="search" (keyup.enter)="listSucursal()" data-kt-customer-table-filter="search"
-            class="form-control form-control-solid w-250px ps-12" placeholder="Search Sucursales" wfd-id="id21">
+            <input type="text" [(ngModel)]="search" name="search" (keyup.enter)="listWarehouse()" data-kt-customer-table-filter="search"
+            class="form-control form-control-solid w-250px ps-12" placeholder="Search Warehouse" wfd-id="id21">
          </div>
          <!--end::Search-->
       </div>
@@ -19,8 +19,8 @@
          <div class="d-flex justify-content-end" data-kt-customer-table-toolbar="base">
             <!--begin::Filter-->
             <!--begin::Add customer-->
-            <button type="button" class="btn btn-primary" (click)="createSucursal()">
-            + Add Sucursal
+            <button type="button" class="btn btn-primary" (click)="createWarehouse()">
+            + Add Warehouse
             </button>
             <!--end::Add customer-->
          </div>
@@ -61,7 +61,7 @@
                      <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="1" rowspan="1"
                         colspan="1" aria-label="Customer Name: Activate to sort" tabindex="0">
                         <span
-                           class="dt-column-title" role="button">Sucursal</span><span
+                           class="dt-column-title" role="button">Almacen</span><span
                            class="dt-column-order"></span>
                      </th>
                        <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
@@ -89,42 +89,37 @@
                </thead>
                <tbody class="fw-semibold text-gray-600">
                   <!-- Fixed: Added null check with *ngIf -->
-                  <ng-container *ngFor="let SUCURSAL of SUCURSALES">
-                     <tr *ngIf="SUCURSAL">
+                  <ng-container *ngFor="let WAREHOUSE of WAREHOUSES">
+                     <tr *ngIf="WAREHOUSE">
 
                         <td>
                            <!-- Fixed: Added safe navigation operator -->
-                           {{ SUCURSAL?.name || 'N/A' }}
+                           {{ WAREHOUSE?.name || 'N/A' }}
                         </td>
                         <td>
                          <!-- Fixed: Added safe navigation operator -->
-                         <span style="width: 550px !important; display: block;" > {{ SUCURSAL.address }} </span>
+                         <span style="width: 550px !important; display: block;" > {{ WAREHOUSE?.address }} </span>
                         </td>
 
 
                         <td>
-                                <ng-container [ngSwitch]="SUCURSAL?.state">
-                                  <span class="badge badge-light-success"   *ngSwitchCase="1">Activo</span>
-                                  <span class="badge badge-light-danger"    *ngSwitchCase="2">Inactivo</span>
-                                  <span class="badge badge-light-warning"   *ngSwitchCase="3">Suspendido</span>
-                                  <span class="badge badge-light-secondary" *ngSwitchDefault>N/A</span>
-                                </ng-container>
+                          campo extra
                         </td>
 
                         <td>
                            <!-- Fixed: Added safe navigation operator -->
-                           {{ SUCURSAL?.created_at || 'N/A' }}
+                           {{ WAREHOUSE?.created_at || 'N/A' }}
                         </td>
 
                         <td class="">
                            <!-- Fixed: Added additional null checks -->
-                           <a  href="#" onclick="return false;" (click)="editSucursal(SUCURSAL)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm me-1">
+                           <a  href="#" onclick="return false;" (click)="editWarehouse(WAREHOUSE)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm me-1">
                            <i class="ki-duotone ki-pencil fs-2"><span class="path1"></span><span class="path2"></span></i>
                            </a>
                         </td>
                         <td>
                            <!-- Fixed: Added additional null checks -->
-                           <a href="#" onclick="return false;" (click)="deleteSucursal(SUCURSAL)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
+                           <a href="#" onclick="return false;" (click)="deleteWarehouse(WAREHOUSE)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
                            <i class="ki-duotone ki-trash fs-2"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span></i>
                            </a>
                         </td>
@@ -147,45 +142,12 @@
                 </ngb-pagination>
          </div>
          <div id="" class="row">
-            <!--   <div id=""
-               class="col-sm-12 col-md-5 d-flex align-items-center justify-content-center justify-content-md-start dt-toolbar">
-               <div><select name="kt_customers_table_length" aria-controls="kt_customers_table"
-                       class="form-select form-select-solid form-select-sm" id="dt-length-0">
-                       <option value="10">10</option>
-                       <option value="25">25</option>
-                       <option value="50">50</option>
-                       <option value="100">100</option>
-                   </select><label for="dt-length-0"></label></div>
-               </div> -->
-            <!--    <div id=""
-               class="col-sm-12 col-md-7 d-flex align-items-center justify-content-center justify-content-md-end">
-               <div class="dt-paging paging_simple_numbers">
-                   <nav aria-label="pagination">
-                       <ul class="pagination">
-                           <li class="dt-paging-button page-item disabled"><button class="page-link previous"
-                                   role="link" type="button" aria-controls="kt_customers_table"
-                                   aria-disabled="true" aria-label="Previous" data-dt-idx="previous"
-                                   tabindex="-1"><i class="previous"></i></button></li>
-                           <li class="dt-paging-button page-item active"><button class="page-link" role="link"
-                                   type="button" aria-controls="kt_customers_table" aria-current="page"
-                                   data-dt-idx="0">1</button></li>
-                           <li class="dt-paging-button page-item"><button class="page-link" role="link"
-                                   type="button" aria-controls="kt_customers_table" data-dt-idx="1">2</button></li>
-                           <li class="dt-paging-button page-item"><button class="page-link" role="link"
-                                   type="button" aria-controls="kt_customers_table" data-dt-idx="2">3</button></li>
-                           <li class="dt-paging-button page-item"><button class="page-link" role="link"
-                                   type="button" aria-controls="kt_customers_table" data-dt-idx="3">4</button></li>
-                           <li class="dt-paging-button page-item"><button class="page-link next" role="link"
-                                   type="button" aria-controls="kt_customers_table" aria-label="Next"
-                                   data-dt-idx="next"><i class="next"></i></button></li>
-                       </ul>
-                   </nav>
-               </div>
-               </div> -->
+
          </div>
       </div>
       <!--end::Table-->
    </div>
    <!--end::Card body-->
 </div>
+
 
