reparacion de sucusrsale_id

--- a/src/app/modules/configuration/warehouse/create-warehouse/create-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/create-warehouse/create-warehouse.component.html
@@ -57,7 +57,7 @@
                           class="form-control form-select-solid fw-bolder"
                           name="sucursal_id"
                           placeholder="Select de Sucursal"
-                          [(ngModel)]="sucursal_id"
+                          [(ngModel)]="sucursale_id"
                       >
                   <ng-container *ngFor="let sucursal of SUCURSALES">
                         <option [value]="sucursal.id" >{{sucursal.name}}</option>
