creacion de edit warehouse

--- a/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
@@ -68,9 +68,10 @@
                         colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
                         class="dt-column-title" role="button">Direccion</span><span
                         class="dt-column-order"></span></th>
+
                      <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
                         colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
-                        class="dt-column-title" role="button">Estado</span><span
+                        class="dt-column-title" role="button">Sucursal</span><span
                         class="dt-column-order"></span></th>
 
 
@@ -103,7 +104,7 @@
 
 
                         <td>
-                          campo extra
+                          {{ WAREHOUSE?.sucursal ? WAREHOUSE.sucursal.name : '------'  }}
                         </td>
 
                         <td>
