--- a/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
@@ -104,7 +104,7 @@
 
 
                         <td>
-                          {{ WAREHOUSE?.sucursal ? WAREHOUSE.sucursal.name : '------'  }}
+                          {{ WAREHOUSE?.sucursale ? WAREHOUSE.sucursale.name : '------'  }}
                         </td>
 
                         <td>
