estilo css en estado

--- a/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
@@ -104,7 +104,8 @@
 
 
                         <td>
-                          {{ WAREHOUSE?.sucursale ? WAREHOUSE.sucursale.name : '------'  }}
+                          <span class="badge badge-light-success"  >{{ WAREHOUSE?.sucursale ? WAREHOUSE.sucursale.name : '------'  }}</span>
+
                         </td>
 
                         <td>
