creacion de SucursalDeliverie

--- a/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
@@ -69,6 +69,11 @@
                         class="dt-column-title" role="button">Direccion</span><span
                         class="dt-column-order"></span></th>
 
+                        <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
+                        colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
+                        class="dt-column-title" role="button">Estado</span><span
+                        class="dt-column-order"></span></th>
+
                      <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
                         colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
                         class="dt-column-title" role="button">Sucursal</span><span
@@ -101,7 +106,15 @@
                          <!-- Fixed: Added safe navigation operator -->
                          <span style="width: 550px !important; display: block;" > {{ WAREHOUSE?.address }} </span>
                         </td>
-
+                          <td>
+                         <!-- Fixed: Added safe navigation operator -->
+                          <ng-container [ngSwitch]="WAREHOUSE.state">
+                                  <span class="badge badge-light-success"   *ngSwitchCase="1">Activo</span>
+                                  <span class="badge badge-light-danger"    *ngSwitchCase="2">Inactivo</span>
+                                  <span class="badge badge-light-warning"   *ngSwitchCase="3">Suspendido</span>
+                                  <span class="badge badge-light-secondary" *ngSwitchDefault>N/A</span>
+                                </ng-container>
+                        </td>
 
                         <td>
                           <span class="badge badge-light-success"  >{{ WAREHOUSE?.sucursale ? WAREHOUSE.sucursale.name : '------'  }}</span>
