cambio de nombres a español

--- a/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
@@ -20,7 +20,7 @@
             <!--begin::Filter-->
             <!--begin::Add customer-->
             <button type="button" class="btn btn-primary" (click)="createWarehouse()">
-            + Add Warehouse
+            + Add Almacen
             </button>
             <!--end::Add customer-->
          </div>
