--- a/src/app/modules/configuration/sucursal-deliveries/list-surcursal-deliveries/list-surcursal-deliveries.component.html
+++ b/src/app/modules/configuration/sucursal-deliveries/list-surcursal-deliveries/list-surcursal-deliveries.component.html
@@ -20,7 +20,7 @@
             <!--begin::Filter-->
             <!--begin::Add customer-->
             <button type="button" class="btn btn-primary" (click)="createSucursalDeliverie()">
-            + Add Sucursal
+            + Add Direccion De Entrega
             </button>
             <!--end::Add customer-->
          </div>
