--- a/src/app/modules/configuration/warehouse/delete-warehouse/delete-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/delete-warehouse/delete-warehouse.component.html
@@ -3,7 +3,7 @@
     <!--begin::Modal header-->
     <div class="modal-header" id="kt_modal_add_user_header">
         <!--begin::Modal title-->
-        <h2 class="fw-bolder"> Delete Rol: #{{ WAREHOUSE_SELECTED.name }}</h2>
+        <h2 class="fw-bolder"> Delete Rol: #{{ SUCURSAL_SELECTED_DELIVERIE.name }}</h2>
 
         <!--end::Modal title-->
         <!--begin::Close-->
@@ -25,7 +25,7 @@
         <!--begin::Form-->
         <form id="kt_modal_add_user_form" class="form" action="#">
             <p>
-                ¿ESTAS SEGURO DE ELIMINAR ESTE ALMACEN? {{ WAREHOUSE_SELECTED.id }} ya no podras revertir el cambio!
+                ¿ESTAS SEGURO DE ELIMINAR ESTE ALMACEN? {{ SUCURSAL_SELECTED_DELIVERIE.id }} ya no podras revertir el cambio!
             </p>
             <div class="text-center pt-15">
                 <button type="reset" class="btn btn-light me-3" (click)="modal.dismiss()">Cerrar</button>
