cambios en create-method_payment

--- a/src/app/modules/configuration/method-payment/list-method-payment/list-method-payment.component.html
+++ b/src/app/modules/configuration/method-payment/list-method-payment/list-method-payment.component.html
@@ -98,7 +98,7 @@
                         </td>
                         <td>
                          <!-- Fixed: Added safe navigation operator -->
-                         <span style="width: 550px !important; display: block;" > {{ PAYMENT.address }} </span>
+                         <span style="width: 550px !important; display: block;" > {{ PAYMENT.method_payment_id }} </span>
                         </td>
 
 
