--- a/src/app/modules/configuration/method-payment/edit-method-payment/edit-method-payment.component.html
+++ b/src/app/modules/configuration/method-payment/edit-method-payment/edit-method-payment.component.html
@@ -3,7 +3,7 @@
     <!--begin::Modal header-->
     <div class="modal-header" id="kt_modal_add_user_header">
         <!--begin::Modal title-->
-        <h2 class="fw-bolder">Edit Sucursal</h2>
+        <h2 class="fw-bolder">Editar Metodo de Pago</h2>
 
         <!--end::Modal title-->
         <!--begin::Close-->
@@ -29,7 +29,7 @@
                 <!--begin::Input group-->
                 <div class="fv-row mb-7">
                     <!--begin::Label-->
-                    <label class="required fw-bold fs-6 mb-2">Nombre Sucursal: </label>
+                    <label class="required fw-bold fs-6 mb-2">Nombre del Metodo de Pago: </label>
                     <!--end::Label-->
                     <!--begin::Input-->
                     <input type="text" name="name" class="form-control form-control-solid mb-3 mb-lg-0" placeholder="Nombre de la Sucursal" [(ngModel)]="name" />
