correccion en select de metodo de pago funcional

--- a/src/app/modules/configuration/method-payment/edit-method-payment/edit-method-payment.component.html
+++ b/src/app/modules/configuration/method-payment/edit-method-payment/edit-method-payment.component.html
@@ -48,6 +48,9 @@
                         <textarea class="form-control form-control-solid"  rows="3" [(ngModel)]="address" name="address" placeholder="Direccion Del Metodo de Pago"></textarea>
                     </div>
 
+
+                    <!---------------------------codigo select------------------------------------>
+
               </div>
                   <div class="fv-row mb-7">
                     <label class="required fw-bold fs-6 mb-2">Selec. STATE</label>
@@ -61,6 +64,8 @@
                     <option value="2" >INACTIVO</option>
                 </select>
             </div>
+
+              <!---------------------------codigo select------------------------------------>
 
                 </div>
             </div>
