--- a/src/app/modules/configuration/method-payment/list-method-payment/list-method-payment.component.html
+++ b/src/app/modules/configuration/method-payment/list-method-payment/list-method-payment.component.html
@@ -66,7 +66,7 @@
                      </th>
                        <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
                         colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
-                        class="dt-column-title" role="button">Direccion</span><span
+                        class="dt-column-title" role="button">Relacion / Padre</span><span
                         class="dt-column-order"></span></th>
                      <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
                         colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
@@ -98,7 +98,7 @@
                         </td>
                         <td>
                          <!-- Fixed: Added safe navigation operator -->
-                         <span style="width: 550px !important; display: block;" > {{ PAYMENT.method_payment_id }} </span>
+                         <span style="width: 550px !important; display: block;" > {{ PAYMENT.method_payment ? PAYMENT.method_payment.name : '----------------------'  }} </span>
                         </td>
 
 
