--- a/src/app/modules/configuration/warehouse/create-warehouse/create-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/create-warehouse/create-warehouse.component.html
@@ -26,14 +26,27 @@
         <form id="kt_modal_add_user_form" class="form" action="#">
              <!--begin::Scroll-->
             <div class="d-flex flex-column scroll-y me-n7 pe-7" id="kt_modal_add_user_scroll" data-kt-scroll="true" data-kt-scroll-activate="{default: false, lg: true}" data-kt-scroll-max-height="auto" data-kt-scroll-dependencies="#kt_modal_add_user_header" data-kt-scroll-wrappers="#kt_modal_add_user_scroll" data-kt-scroll-offset="300px">
-                <!--begin::Input group-->
-                <div class="fv-row mb-7">
-                    <!--begin::Label-->
-                    <label class="required fw-bold fs-6 mb-2">Nombre de Almacen: </label>
-                    <!--end::Label-->
-                    <!--begin::Input-->
-                    <input type="text" name="name" class="form-control form-control-solid mb-3 mb-lg-0" placeholder="Nombre del Almacen" [(ngModel)]="name" />
-                    <!--end::Input-->
+
+                 <div class="fv-row mb-7">
+                  <label class="required fw-bold fs-6 mb-2" for="payment-name">
+                    Nombre del Almacen
+                  </label>
+                  <input
+                    type="text"
+                    id="payment-name"
+                    name="name"
+                    class="form-control form-control-solid mb-3 mb-lg-0"
+                    placeholder="Ingrese el nombre del método de pago"
+                    [(ngModel)]="name"
+                    #nameField="ngModel"
+                    required
+                    maxlength="100"
+                  />
+                  <div *ngIf="nameField.invalid && nameField.touched" class="text-danger mt-1">
+                    <small *ngIf="nameField.errors?.['required']">
+                      El nombre del Almacen es requerido
+                    </small>
+                  </div>
                 </div>
 
                 <div class="fv-row mb-7">
@@ -43,10 +56,33 @@
 
                     <!--end::Label-->
                     <!--begin::Input-->
-                    <div class="d-flex flex-column mb-8">
-                        <label class="required fs-6 fw-semibold mb-2">Direccion (Opcional)</label>
-                        <textarea class="form-control form-control-solid"  rows="3" [(ngModel)]="address" name="address" placeholder="Direccion del Almacen"></textarea>
-                    </div>
+
+
+                     <div class="fv-row mb-7">
+          <label class="fs-6 fw-semibold mb-2" for="payment-address">
+            Dirección (Opcional)
+          </label>
+          <textarea
+            id="payment-address"
+            class="form-control form-control-solid"
+            name="address"
+            rows="3"
+            [(ngModel)]="address"
+            placeholder="Ingrese la dirección del Almacen"
+            maxlength="500"
+             #addressField="ngModel"
+            required
+             maxlength="100"
+          ></textarea>
+          <div class="form-text">
+            Máximo 500 caracteres
+          </div>
+            <div *ngIf="addressField.invalid && addressField.touched" class="text-danger mt-1">
+                              <small *ngIf="addressField.errors?.['required']">
+                                la direccion es requerida
+                            </small>
+                        </div>
+        </div>
 
                     </div>
 
