creacion de componenetes y edicion de Segmento del Cliente

--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -79,7 +79,7 @@
           </a>
         </div>
         <div class="menu-item">
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/apps/roles">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/configuraciones/segmento-de-cliente/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
