--- a/src/app/modules/configuration/client-segment/create-client-segment/create-client-segment.component.html
+++ b/src/app/modules/configuration/client-segment/create-client-segment/create-client-segment.component.html
@@ -56,7 +56,7 @@
 
                     <!--end::Label-->
                     <!--begin::Input-->
-                    <div class="d-flex flex-column mb-8">
+                    <!-- <div class="d-flex flex-column mb-8">
                         <label class="required fs-6 fw-semibold mb-2">Direccion (Opcional)</label>
                         <textarea class="form-control form-control-solid"  rows="3" [(ngModel)]="address"
                          name="address" placeholder="Direccion del segmento de clientes"
@@ -70,7 +70,7 @@
                             </small>
                         </div>
 
-                    </div>
+                    </div> -->
 
 
 
