--- a/src/app/modules/configuration/client-segment/edit-client-segment/edit-client-segment.component.html
+++ b/src/app/modules/configuration/client-segment/edit-client-segment/edit-client-segment.component.html
@@ -43,10 +43,10 @@
 
                     <!--end::Label-->
                     <!--begin::Input-->
-                    <div class="d-flex flex-column mb-8">
+                    <!-- <div class="d-flex flex-column mb-8">
                         <label class="required fs-6 fw-semibold mb-2">Direccion (Opcional)</label>
                         <textarea class="form-control form-control-solid"  rows="3" [(ngModel)]="address" name="address" placeholder="Direccion de la Sucursal"></textarea>
-                    </div>
+                    </div> -->
 
               </div>
                   <div class="fv-row mb-7">
