--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -229,7 +229,7 @@
         <span class="menu-icon">
           <app-keenicon name="parcel" class="fs-2"></app-keenicon>
         </span>
-        <span class="menu-title" data-link="/apps">Productos
+        <span class="menu-title" data-link="/configuraciones/categorias-de-producto/list">Productos
         </span>
         <span class="menu-arrow"></span>
       </span>
@@ -245,7 +245,7 @@
           </a>
         </div>
         <div class="menu-item" *ngIf="showMenu(['list_product'])" >
-          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/apps/roles">
+          <a class="menu-link without-sub" routerLinkActive="active" routerLink="/configuraciones/categorias-de-producto/list">
             <span
               class="menu-bullet">
               <span class="bullet bullet-dot"></span>
