--- a/src/app/modules/configuration/product-categories/list-product-categorie/list-product-categorie.component.html
+++ b/src/app/modules/configuration/product-categories/list-product-categorie/list-product-categorie.component.html
@@ -20,7 +20,7 @@
             <!--begin::Filter-->
             <!--begin::Add customer-->
             <button type="button" class="btn btn-primary" (click)="createProductCategorie()">
-            + Add Segmento de Cliente
+            + Add Categoria de Producto
             </button>
             <!--end::Add customer-->
          </div>
@@ -61,7 +61,7 @@
                      <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="1" rowspan="1"
                         colspan="1" aria-label="Customer Name: Activate to sort" tabindex="0">
                         <span
-                           class="dt-column-title" role="button">Sucursal</span><span
+                           class="dt-column-title" role="button">Categoria del Producto</span><span
                            class="dt-column-order"></span>
                      </th>
                        <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
