creacion de componentes de listado edicion borrado y creacion de archivos de gestionamiento de Categorias de Productos

--- a/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
+++ b/src/app/modules/configuration/warehouse/list-warehouse/list-warehouse.component.html
@@ -93,6 +93,8 @@
                      </th>
                   </tr>
                </thead>
+
+               <!--pre>{{ WAREHOUSES | json }}</pre---//--->
                <tbody class="fw-semibold text-gray-600">
                   <!-- Fixed: Added null check with *ngIf -->
                   <ng-container *ngFor="let WAREHOUSE of WAREHOUSES">
