--- a/src/app/modules/configuration/product-categorie/list-product-categorie/list-product-categorie.component.html
+++ b/src/app/modules/configuration/product-categorie/list-product-categorie/list-product-categorie.component.html
@@ -6,8 +6,8 @@
          <!--begin::Search-->
          <div class="d-flex align-items-center position-relative my-1">
             <i class="ki-duotone ki-magnifier fs-3 position-absolute ms-5"><span class="path1"></span><span class="path2"></span></i>
-            <input type="text" [(ngModel)]="search" name="search" (keyup.enter)="listProductCategorie()" data-kt-customer-table-filter="search"
-            class="form-control form-control-solid w-250px ps-12" placeholder="Search Segmento de Clientes" wfd-id="id21">
+            <input type="text" [(ngModel)]="search" name="search" (keyup.enter)="listProductCategories()" data-kt-customer-table-filter="search"
+            class="form-control form-control-solid w-250px ps-12" placeholder="Search Cat. de Productos" wfd-id="id21">
          </div>
          <!--end::Search-->
       </div>
@@ -20,7 +20,7 @@
             <!--begin::Filter-->
             <!--begin::Add customer-->
             <button type="button" class="btn btn-primary" (click)="createProductCategorie()">
-            + Add Categoria de Producto
+            + Add Categoria de Productos
             </button>
             <!--end::Add customer-->
          </div>
@@ -61,13 +61,10 @@
                      <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="1" rowspan="1"
                         colspan="1" aria-label="Customer Name: Activate to sort" tabindex="0">
                         <span
-                           class="dt-column-title" role="button">Categoria del Producto</span><span
+                           class="dt-column-title" role="button">Categoria de Productos</span><span
                            class="dt-column-order"></span>
                      </th>
-                       <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
-                        colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
-                        class="dt-column-title" role="button">Direccion</span><span
-                        class="dt-column-order"></span></th>
+
                      <th class="min-w-125px dt-orderable-asc dt-orderable-desc" data-dt-column="2" rowspan="1"
                         colspan="1" aria-label="Email: Activate to sort" tabindex="0"><span
                         class="dt-column-title" role="button">Estado</span><span
@@ -89,21 +86,16 @@
                </thead>
                <tbody class="fw-semibold text-gray-600">
                   <!-- Fixed: Added null check with *ngIf -->
-                  <ng-container *ngFor="let PRODUCTCATEGORIE of PRODUCTCATEGORIES">
-                     <tr *ngIf="PRODUCTCATEGORIE">
+                  <ng-container *ngFor="let PCATEGORIE of PRODUCTS_CATEGORIES">
+                     <tr *ngIf="PRODUCTS_CATEGORIES">
 
                         <td>
                            <!-- Fixed: Added safe navigation operator -->
-                           {{ PRODUCTCATEGORIE?.name || 'N/A' }}
-                        </td>
-                        <td>
-                         <!-- Fixed: Added safe navigation operator -->
-                         <span style="width: 550px !important; display: block;" > {{ PRODUCTCATEGORIE.address }} </span>
+                           {{ PCATEGORIE?.name || 'N/A' }}
                         </td>
 
-
                         <td>
-                                <ng-container [ngSwitch]="PRODUCTCATEGORIE.state">
+                                <ng-container [ngSwitch]="PCATEGORIE.state">
                                   <span class="badge badge-light-success"   *ngSwitchCase="1">Activo</span>
                                   <span class="badge badge-light-danger"    *ngSwitchCase="2">Inactivo</span>
                                   <span class="badge badge-light-warning"   *ngSwitchCase="3">Suspendido</span>
@@ -113,18 +105,18 @@
 
                         <td>
                            <!-- Fixed: Added safe navigation operator -->
-                           {{ PRODUCTCATEGORIE?.created_at || 'N/A' }}
+                           {{ PCATEGORIE?.created_at || 'N/A' }}
                         </td>
 
                         <td class="">
                            <!-- Fixed: Added additional null checks -->
-                           <a  href="#" onclick="return false;" (click)="editProductCategorie(PRODUCTCATEGORIE)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm me-1">
+                           <a  href="#" onclick="return false;" (click)="editProductCategorie(PCATEGORIE)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm me-1">
                            <i class="ki-duotone ki-pencil fs-2"><span class="path1"></span><span class="path2"></span></i>
                            </a>
                         </td>
                         <td>
                            <!-- Fixed: Added additional null checks -->
-                           <a href="#" onclick="return false;" (click)="deleteProductCategorie(PRODUCTCATEGORIE)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
+                           <a href="#" onclick="return false;" (click)="deleteProductCategorie(PCATEGORIE)" class="btn btn-icon btn-bg-light btn-active-color-primary btn-sm">
                            <i class="ki-duotone ki-trash fs-2"><span class="path1"></span><span class="path2"></span><span class="path3"></span><span class="path4"></span><span class="path5"></span></i>
                            </a>
                         </td>
@@ -188,6 +180,5 @@
    </div>
    <!--end::Card body-->
 </div>
-
 
 
